# nameshed

./: .readthedocs.yaml  Cargo.toml  LICENSE  README.md  approve_or_deny.sh  approve_or_deny_signed.sh  cascade.conf  config.toml  example.zone  nameshed.conf  nsd.conf
.github/workflows/: ci.yml  pkg.yml
doc/manual/: Makefile  README.md  pyproject.toml  requirements.txt
doc/manual/source/: building.rst  conf.py  index.rst  installation.rst
pkg/common/: cascade.service  cascaded.service  service.preset
pkg/debian/: postinst  postrm
pkg/rpm/: scriptlets.toml
pkg/rpm/repo/: README.md
pkg/rpm/repo/10/local/x86_64/RPMS/: kmip2pkcs11-0.1.0-1.x86_64.rpm
pkg/rpm/repo/10/local/x86_64/repodata/: 148b67c313b1230df293340bbe3c9da66f2eae250d1360ea705c1cbffb43a7c0-primary.xml.zst  3362d0f35f5cd62381758d1002abf41e72617eba02c4c28504dcb1a726437a02-primary.xml.zst  6238969669d8888dcd91419fcedbe1185657feb6e4aa59d6fce71247de87c3a8-filelists.xml.zst  6614cd221e79892424212cdde7d9e271986a4c262fa6312f4acc5d71a41dc760-other.xml.zst  69377a6c6ad1d97e531231dd8448e7748e4cfb8bbda0eacfff26e64800746d84-other.sqlite.bz2  c7f882772a4392df9bc7ff2e463bed3a08eaacb9505045cbdf9c8e4aec040517-primary.sqlite.bz2  cf929988ff95c34779b7a39e86f27cd06bc85bf7f48d3c15adc8cd9f2a189d4a-primary.sqlite.bz2  dfa3bb147c8d35e809124bd29566b0bbcfbc0b06c9e96eb530881e962c300dd4-filelists.sqlite.bz2  repomd.xml
pkg/rpm/repo/4/local/i386/RPMS/: dnst-0.1.0~rc1-1.x86_64.rpm
pkg/rpm/repo/4/local/i386/repodata/: 618d93b11d0d8a2629a2024dae8b5439757f6e09189d33f14dbb395047fadcc2-other.xml.zst  a4060f66cf14007d31c137adee4364af586eac92e65db252b025cc08fd48394e-filelists.sqlite.bz2  ad9cfb1e8b45b4f8ab595b1076542a8d3a2962e08baf462e02cfe918d7a7e105-primary.xml.zst  b2e19221a2dc17c7e947d1fdfc2e9360ce08c6b26f9d6f85b03ebbffccc52557-other.sqlite.bz2  bc7f92fb3154c8926813e3473e39e45a2783a70db049da01ef085f74ace7b3b2-filelists.xml.zst  e2422aa03f1ce3ec7f47b910c0025bce4aa8756bb09730b0d7f45e0df8107a0d-primary.sqlite.bz2  repomd.xml
pkg/rules/: packages-to-build.yml
pkg/test-scripts/: test-cascade.sh
src/: api.rs  archive.rs  center.rs  comms.rs  config.rs  error.rs  http.rs  lib.rs  log.rs  main.rs  manager.rs  metrics.rs  new.rs  oldzones.rs  operation.rs  path_monitor.rs  payload.rs  process.rs  self_signing_zone.rs  store.rs  tokio.rs  tracing.rs  util.rs  zonefile.rs
src/api/: mod.rs  status.rs
src/cli/: args.rs  client.rs  error.rs  mod.rs  report.rs
src/cli/commands/: mod.rs  policy.rs  status.rs  zone.rs
src/cli/options/: args.rs  mod.rs  server.rs
src/common/: file_io.rs  frim.rs  httpclient.rs  json.rs  light_weight_zone.rs  memory.rs  mod.rs  net.rs  status_reporter.rs  tsig.rs  unit.rs  xfr.rs
src/config/: args.rs  env.rs  mod.rs
src/config/file/: mod.rs  v1.rs
src/loader/: mod.rs  refresh.rs  server.rs  zonefile.rs
src/net/: mod.rs  server.rs  sock.rs
src/policy/: mod.rs
src/policy/file/: mod.rs  v1.rs
src/state/: mod.rs  v1.rs
src/targets/: central_command.rs  mod.rs
src/tests/: util.rs
src/tsig/: mod.rs
src/tsig/file/: mod.rs  v1.rs
src/units/: http_server.rs  key_manager.rs  listen.rs  mod.rs  zone_loader.rs  zone_server.rs  zone_signer.rs
src/zone/: contents.rs  loader.rs  mod.rs
src/zone/state/: mod.rs  v1.rs
src/zonemaintenance/: maintainer.rs  mod.rs  types.rs
src/zones/: answer.rs  builder.rs  flavor.rs  mod.rs  nodes.rs  read.rs  rrset.rs  set.rs  versioned.rs  write.rs  zone.rs
ui/: index.html  package.json
ui/src/: App.css  App.tsx
