[package]
name = "nameshed"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap       = "1.7.0"
bytes	       = "1.0"
chrono         = "0.4.11"
clap           = { version = "4.4", features = [ "cargo", "wrap_help" ] }
dirs           = "4.0"
domain         = { git = "https://github.com/NLnetLabs/domain", branch = "patches-for-nameshed-prototype", features = [
    "openssl",
    "tokio-stream",
    "tsig",
    "unstable-client-transport",
    "unstable-crypto-sign",
    "unstable-new",
    "unstable-server-transport",
    "unstable-sign",
    "unstable-zonetree",
    "kmip",
] }
fern           = "0.6.0"
futures        = "0.3.17"
futures-util   = "0.3"
log            = "0.4"
log-reroute    = "0.1.5"
octseq         = { version = "0.5.2", default-features = false }
parking_lot    = "0.11.2"
tokio          = { version = "1.40", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "signal", "sync", "test-util", "time", "tracing"] }
serde          = { version = "1.0", features = ["derive", "rc"] }
toml           = "0.8"
tokio-rustls   = { version = "0.23.4", optional = true }
tokio-stream   = { version = "0.1.1" }
rustls-pemfile = { version = "1.0", optional = true }
tracing        = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# From Rotonda
allocator-api2     = "0.2"
assert-json-diff   = "2.0"
async-trait        = "0.1"
atomic_enum        = "0.2.0"
crossbeam-utils    = "0.8"
env_logger         = "0.10"
flate2             = "*"
hashbrown          = "0.14"
hyper              = { version = "0.14", features = ["server", "stream"] }
layout-rs          = { version = "0.1" }
non-empty-vec      = { version = "0.2", features = ["serde"]}
percent-encoding   = "2.3"
prometheus-parse   = "0.2"
reqwest            = { version = "0.11", default-features = false }
serde_json         = "1.0"
serde_with         = "3"
smallvec           = { version = "1.11", features = ["const_generics", "const_new", "union"] }
tokio-metrics      = { version = "0.3", default-features = false }
url                = { version = "2.4", features = ["serde"] }
uuid               = { version = "1.4", features = ["v4", "fast-rng"] }
indoc              = "2.0.5"
rayon = "1.10.0"

# Nameshed contains many performance-sensitive hashmaps and is not expected to
# be accessible to attackers.  'std's default hasher, which is slow but secure
# against HashDoS attacks, is not appropriate.  A performant, cryptographically
# insecure hash function is needed.
#
# - 'foldhash' is a fast, insecure, general-purpose hash function.
#
#   TODO: Who maintains it, and how well?
#
# - 'rustc-hash' is the hash function used by 'rustc'.  It trades hash quality
#   for performance, as best suites 'rustc'.
#
#   TODO: Who maintains it, and how well?
[dependencies.foldhash]
version = "0.1.5"

# Nameshed sometimes requires filesystem paths to be encoded within UTF-8 texts.
# To conveniently resolve the conversion between the OS filesystem encoding and
# UTF-8, 'camino' is used, which restricts filesystem paths to UTF-8.
#
# TODO: Who maintains it, and how well?
[dependencies.camino]
version = "1.1.0"
features = ["serde1"]

# Nameshed needs to monitor the filesystem for changes to configuration and
# state, as well as for zones loaded from zonefiles.
#
# TODO
[dependencies.notify]
version = "8.1.0"

[target.'cfg(unix)'.dependencies]
nix         = "0.22.0"
syslog      = "6.1"

[features]
default = []
tls = ["tokio-rustls", "rustls-pemfile"]
