[package]
name = "cascade"
default-run = "cascade"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
exclude = [".github", ".gitignore"]
readme = "README.md"

[dependencies]
arc-swap       = "1.7.0"
bytes	       = "1.0"
chrono         = "0.4.11"
clap           = { version = "4.5", features = [ "cargo", "wrap_help", "derive" ] }
dirs           = "4.0"
domain         = { git = "https://github.com/NLnetLabs/domain", branch = "patches-for-nameshed-prototype", features = [
    "openssl",
    "tokio-stream",
    "tsig",
    "unstable-client-transport",
    "unstable-crypto-sign",
    "unstable-server-transport",
    "unstable-sign",
    "unstable-zonetree",
    "kmip",
] }
futures        = "0.3.17"
futures-util   = "0.3"
octseq         = { version = "0.5.2", default-features = false }
parking_lot    = "0.11.2"
tokio          = { version = "1.40", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "signal", "sync", "test-util", "time", "tracing"] }
serde          = { version = "1.0", features = ["derive", "rc"] }
toml           = "0.8"
tokio-rustls   = { version = "0.23.4", optional = true }
tokio-stream   = { version = "0.1.1" }
rustls-pemfile = { version = "1.0", optional = true }
tracing        = { version = "0.1.40" }
tracing-subscriber	= { version = "0.3.18", features = ["env-filter"] }
# Added for HTTP API
hyper				= { version = "1.6.0", features = ["server"] }
# For hyper-tokio integration
hyper-util			= { version = "0.1.16" }
# Added for CLI to access HTTP API
# `default-features = false` was copied from previous import from the Rotonda base
reqwest				= { version = "0.12", default-features = false, features = ["http2", "json"] }
axum				= { version = "0.8.4", features = ["http2", "ws"] }

# From Rotonda
allocator-api2     = "0.2"
assert-json-diff   = "2.0"
async-trait        = "0.1"
atomic_enum        = "0.2.0"
crossbeam-utils    = "0.8"
flate2             = "*"
hashbrown          = "0.14"
layout-rs          = { version = "0.1" }
non-empty-vec      = { version = "0.2", features = ["serde"]}
percent-encoding   = "2.3"
prometheus-parse   = "0.2"
serde_json         = "1.0"
serde_with         = "3"
smallvec           = { version = "1.11", features = ["const_generics", "const_new", "union"] }
tokio-metrics      = { version = "0.3", default-features = false }
url                = { version = "2.4", features = ["serde"] }
uuid               = { version = "1.4", features = ["v4", "fast-rng"] }
indoc              = "2.0.5"
rayon = "1.10.0"

# 'log' is a very popular logging crate, and is the primary means for Cascade
# to indicate what it's doing at any time.
[dependencies.log]
version = "0.4"

# Cascade contains many performance-sensitive hashmaps and is not expected to
# be accessible to attackers.  'std's default hasher, which is slow but secure
# against HashDoS attacks, is not appropriate.  A performant, cryptographically
# insecure hash function is needed.
#
# - 'foldhash' is a fast, insecure, general-purpose hash function.
#
#   TODO: Who maintains it, and how well?
#
# - 'rustc-hash' is the hash function used by 'rustc'.  It trades hash quality
#   for performance, as best suites 'rustc'.
#
#   TODO: Who maintains it, and how well?
[dependencies.foldhash]
version = "0.1.5"

# Cascade sometimes requires filesystem paths to be encoded within UTF-8 texts.
# To conveniently resolve the conversion between the OS filesystem encoding and
# UTF-8, 'camino' is used, which restricts filesystem paths to UTF-8.
#
# TODO: Who maintains it, and how well?
[dependencies.camino]
version = "1.1.0"
features = ["serde1"]

[target.'cfg(unix)'.dependencies]
nix         = "0.22.0"
syslog      = "7.0"

[features]
default = []
tls = ["tokio-rustls", "rustls-pemfile"]

# TODO: Do we want this?
# [profile.release]
# panic = "abort"

[package.metadata.deb]
assets = [
	[
		"target/release/cascade",
		"usr/bin/",
		"755",
	],
	[
		"target/release/cascadec",
		"usr/bin/",
		"755",
	],
	[
		"README.md",
		"usr/share/doc/cascade/",
		"644",
	],
	#["doc/cascade.1", "usr/share/man/man1/cascade.1", "644"],
	#["doc/cascadec.1", "usr/share/man/man1/cascadec.1", "644"],
	[
		"cascade.conf",
		"etc/cascade/cascade.conf",
		"644",
	],
	[
		"pkg/common/service.preset",
		"usr/lib/systemd/service-preset/50-cascade.preset",
		"644",
	],
]
name = "cascade"
# TODO: create email alias
maintainer = "NLnet Labs <cascade@nlnetlabs.nl>"
license-file = ["LICENSE", "0"]
# TODO: come up with a description (also for the git repo)
extended-description = "A batteries-included DNSSEC signing solution."
depends = "$auto, passwd, dnst, cascade-hsm-relay"
section = "net"
priority = "optional"
maintainer-scripts = "pkg/debian"
changelog = "target/debian/changelog" # this will be generated by the pkg workflow
copyright = "Copyright (c) 2025, NLnet Labs. All rights reserved."
conf-files = ["/etc/cascade/cascade.conf"]
systemd-units = { unit-name = "cascade", unit-scripts = "pkg/common", enable = false }

[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/cascade", dest = "/usr/bin/cascade", mode = "755" },
	{ source = "target/rpm/cascade.service", dest = "/usr/lib/systemd/system/cascade.service", mode = "644" },
	#{ source = "doc/cascade.1", dest = "/usr/share/man/man1/cascade.1", mode = "644", doc = true },
	#{ source = "doc/cascadec.1", dest = "/usr/share/man/man1/cascadec.1", mode = "644", doc = true },
	{ source = "cascade.conf", dest = "/etc/cascade/cascade.conf", mode = "644", config = true },
	{ source = "pkg/common/service.preset", dest = "/usr/lib/systemd/system-preset/50-cascade.preset", mode = "644" },
]

# ensure that the useradd tools are present by installing their respective packages
[package.metadata.generate-rpm.requires]
shadow-utils = "*"
dnst = "*"
cascade-hsm-relay = "*"
